assets/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
:root {
  --cyan: rgb(2, 141, 141);
  --grey: rgb(200, 200, 200);
  --lightgrey: rgb(148, 148, 148);
  --darkgrey: rgb(104, 104, 104);
}
html {
  scroll-behavior: smooth;
}
a {
  text-decoration: none;
  color: black;
}
body {
  background-color: black;
}
main {
  display: flex;
}
/* loading screen  */
.loadingscreen {
  width: 100%;
  height: 100vh;
  position: absolute;
  background-color: black;
  z-index: 2;
  display: block;
  animation: disappear 7s 1 ease-in-out forwards;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loadingscreen img {
  width: 200px;
}
.loadingscreen div {
  color: white;
}
@keyframes disappear {
  from {
    opacity: 1;
    z-index: 2;
  }
  to {
    opacity: 0;
    z-index: 0;
  }
}
/* sidebar */
.sidebar {
  width: 20%;
  height: 100vh;
  background-color: white;
  position: fixed;
  z-index: 1;
}
.sidebarshadow {
  width: 20%;
  height: 100%;
  flex-shrink: 0;
}
.me {
  width: 100px;
  height: 100px;
  border-radius: 5px;
  margin: 15px;
}
.sidebar p {
  margin: 0 0 30px 15px;
}
.sidebar > a:first-of-type {
  color: var(--cyan);
}
.sidebar > a {
  font-size: small;
  display: block;
  padding: 10px;
  margin-left: 5px;
}
.sidebar > a:first-of-type:hover {
  color: black;
}
.sidebar > a:hover {
  background-color: var(--grey);
}
.sidebar div {
  margin-top: 30px;
  padding: 10px;
}
.sidebar div a {
  color: black;
  font-size: small;
  margin-top: 10px;
}
/* top  */
.notsidebar {
  display: flex;
  flex-direction: column;
  background-color: rgb(227, 227, 227);
  z-index: 1;
}
.top {
  width: 100%;
}
.top > p {
  font-size: xx-large;
  display: inline-block;
  margin: 10px;
}
/* \filter  */
.filter {
  margin: 10px 0 20px 10px;
  display: flex;
  align-items: center;
  gap: 5px;
}
.filter p {
  font-size: small;
  font-weight: 100;
  display: inline-block;
  margin-right: 10px;
}
.filter a {
  display: inline-block;
  padding: 10px;
  background-color: white;
  font-size: small;
}
.filter a:first-of-type,
#nigga {
  background-color: black;
  color: white;
}
.filter a:hover {
  background-color: var(--grey);
}
#nigga:hover,
.filter a:first-of-type:hover {
  background-color: var(--grey);
  color: black;
}
.line {
  display: flex;
  justify-content: center;
  margin: 10px;
}
.line div {
  width: 100%;
  height: 4px;
  background-color: var(--grey);
}
/* websites  */
.images2 {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
}
.img2 {
  display: inline-block;
  width: 45%;
  background-color: white;
  margin: 10px;
  opacity: 0.75;
  transition: 0.3s ease-in-out;
}

.img2 img {
  width: 100%;
  height: 200px;
}
.img2:hover {
  opacity: 1;
}
/* pages */
.pages {
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
}
.pages a {
  display: inline-block;
  padding: 8px 16px;
  font-size: small;
}
.pages a:hover {
  background-color: black;
  color: white;
}
/* aboutme */
.aboutme {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  padding: 20px;
  font-size: small;
}
.maincontent {
  display: flex;
  justify-content: center;
  align-items: center;
}
.maincontent img {
  transition: 0.5s ease-out;
}
.maincontent img:hover {
  scale: 1.05;
}
.desc {
  width: 45%;
  padding: 30px;
}
.desc div {
  margin: 20px 0;
}
.desc div p {
  font-size: large;
  font-weight: bold;
  margin-bottom: 20px;
}
.desc ul li {
  margin: 10px;
}
.imagesme {
  width: 50%;
}
.imagesme img {
  width: 100%;
  margin: 0px;
}
.percentage {
  width: 100%;
  margin: 20px 0;
}
.percentage p {
  margin-top: 10px;
}
.hundred {
  width: 100%;
  background-color: var(--lightgrey);
  height: 30px;
  margin: 10px 0;
}
.seventy,
.seventyfive,
.eighty,
.twenty {
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30px;
  background-color: var(--darkgrey);
  transition: 0.5s ease-in-out;
}
.hundred:hover .seventy,
.hundred:hover .seventyfive,
.hundred:hover .eighty,
.hundred:hover .twenty {
  background-color: black;
}
.seventy {
  width: 75%;
}
.seventyfive {
  width: 75%;
}
.eighty {
  width: 80%;
}
.twenty {
  width: 20%;
}
#resume {
  padding: 10px;
  background-color: var(--darkgrey);
  margin: 20px 0;
  border-radius: 5px;
  transition: 0.4s ease-in-out;
}
#resume a {
  color: white;
}
#resume:hover {
  background-color: black;
}
#resume:hover a {
  color: white;
}
/* images  */
.container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  overflow-y: scroll;
  height: 605px;
}
.images,
.aboutme,
.charges,
#contactme {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  gap: 10px;
  width: 100%;
}
.img {
  display: inline-block;
  width: 290px;
  background-color: white;
  margin-bottom: 20px;
  opacity: 0.75;
  transition: 0.3s ease-in-out;
}
.imgcontent {
  padding: 10px;
  font-size: small;
}

.img img {
  width: 100%;
  height: 200px;
}
.img:hover {
  opacity: 1;
}
/* charges  */
.charges {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 20px;
}
.basic {
  display: inline-block;
  width: 31%;
  background-color: white;
  text-align: center;
  opacity: 0.65;
  transition: 0.5s ease-in-out;
}
.basic:hover {
  opacity: 1;
}
.basic div {
  padding: 15px;
  border-bottom: 1px solid rgb(185, 184, 184);
  font-size: small;
  height: 74px;
}
.basic div:last-child {
  height: 104px;
}
.basic a {
  background-color: var(--cyan);
  color: white;
  display: inline-block;
  padding: 10px 15px;
  margin: 10px;
}
.basic a:hover {
  background-color: black;
  color: white;
}
.heading {
  padding: 20px;
  background-color: black;
  color: white;
  font-size: larger !important;
}
.heading2 {
  padding: 20px;
  background-color: var(--cyan);
  color: white;
  font-size: larger !important;
}
.para1 {
  width: 100%;
  margin: 20px;
}
/* contact  */
#contactme {
  background-color: var(--grey);
  justify-content: unset;
  padding: 20px;
}
.info {
  display: flex;
  width: 100%;
  justify-content: center;
}
.info i {
  margin-right: 5px;
}
.info div {
  display: block;
  width: 33.33%;
  padding: 30px;
  background-color: var(--darkgrey);
  color: white;
  font-size: small;
  text-align: center;
}
.info div a {
  color: white;
}
#address {
  background-color: var(--cyan);
}
.line2 {
  width: 100%;
  text-align: center;
}
.line2 div {
  background-color: white;
  height: 1px;
  margin: 15px;
}
.inputs {
  width: 100%;
  font-size: small;
}
input {
  width: 100%;
  display: block;
  margin-bottom: 10px;
  height: 30px;
}
input:focus {
  outline: none;
}
button {
  background-color: black;
  color: white;
  padding: 10px;
  margin: 10px 0;
  border: 0;
  border-radius: 2px;
}
button:hover {
  background-color: var(--darkgrey);
  color: black;
}
/* footer 
footer {
  background-color: var(--darkgrey);
  display: flex;
  padding: 20px;
  color: white;
  font-size: small;
}
.para {
  width: 100%;
  margin-bottom: 5px;
  font-size: large;
  padding: 0;
}
footer div {
  width: 33.33%;
  padding: 10px;
}
.blog {
  width: 100%;
  border-bottom: 1px solid white;
}
.blog:hover {
  background-color: var(--lightgrey);
}
footer span {
  font-size: x-small;
  background-color: var(--lightgrey);
  color: black;
  padding: 2px 5px;
  display: inline-block;
  margin: 5px;
}
footer span:hover {
  background-color: black;
  color: white;
} */
.copyright {
  width: 100%;
  background-color: black;
  color: white;
  text-align: right;
  padding: 10px;
}
.copyright p {
  font-size: small;
}
.blogimg {
  width: 50px;
  height: 30px;
  margin-right: 10px;
}
/* responsive  */
@media (width < 850px) {
  /* .loadingscreen {
    display: none;
  } */
  .sidebar,
  .sidebarshadow {
    display: none;
  }
  .images,
  .top {
    width: 100%;
  }
  .notsidebar {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-start;
  }
  .desc {
    padding: 0 20px;
  }
  .desc ul li {
    margin: 2px;
  }
  .maincontent {
    scale: 1.1;
  }
}
@media (width < 500px) {
  .img {
    width: 90%;
    opacity: 1;
  }
  .img2 {
    width: 90%;
    opacity: 1;
  }
  .basic {
    opacity: 1;
  }
  .info div {
    padding: 30px 10px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

